--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>htsjdk</artifactId>
 			<version>2.23.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
